--- a/pages/proposal.html
+++ b/pages/proposal.html
@@ -48,7 +48,7 @@
                 <div class="navbar-end">
                     <a class="navbar-item" href="../index.html">Home</a>
                     <a class="navbar-item is-active" href="./proposal.html">Proposal</a>
-                    <a class="navbar-item" href="./contact.html">Contact</a>
+                    <!-- <a class="navbar-item" href="./contact.html">Contact</a> -->
                     <a class="navbar-item" href="./team.html">Team</a>
                 </div>
             </div>
