--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="navbar-end">
                 <a class="navbar-item is-active" href="./index.html">Home</a>
                 <a class="navbar-item" href="./pages/proposal.html">Proposal</a>
-                <a class="navbar-item" href="./pages/contact.html">Contact</a>
+                <!-- <a class="navbar-item" href="./pages/contact.html">Contact</a> -->
                 <a class="navbar-item" href="./pages/team.html">Team</a>
             </div>
         </div>
