--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,54 +49,77 @@
                 <div class="navbar-end">
                     <a class="navbar-item" href="../index.html">Home</a>
                     <a class="navbar-item" href="./proposal.html">Proposal</a>
-                    <a class="navbar-item is-active" href="./contact.html">Contact</a>
+                    <!-- <a class="navbar-item is-active" href="./contact.html">Contact</a> -->
                     <a class="navbar-item" href="./team.html">Team</a>
                 </div>
             </div>
         </div>
     </nav>
 
-    <section class="hero is-fullheight">
-        <div class="hero-body">
-            <div class="container has-text-centered">
-                <div class="columns is-8 is-variable">
-                    <div class="column is-two-thirds has-text-left">
-                        <h1 class="title is-1" id="contactTitle"></h1>
-                        
-                        <p class="is-size-4" id="description"></p>
-                        
-                        <div class="social-media">
-                            <a href="#" target="_blank" class="button is-light is-large" id="facebookLink"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-                            <a href="#" target="_blank" class="button is-light is-large" id="instagramLink"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                            <a href="#" target="_blank" class="button is-light is-large" id="twitterLink"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- Add your head content here -->
+</head>
+<body>
+
+<section class="hero is-fullheight">
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <div class="columns is-8 is-variable">
+                <div class="column is-two-thirds has-text-left">
+                    <h1 class="title is-1" id="contactTitle"></h1>
+
+                    <p class="is-size-4" id="description"></p>
+
+                    <div class="social-media">
+                        <a href="#" target="_blank" class="button is-light is-large" id="facebookLink"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+                        <a href="#" target="_blank" class="button is-light is-large" id="instagramLink"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                        <a href="#" target="_blank" class="button is-light is-large" id="twitterLink"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+                <div class="column is-one-third has-text-left">
+                    <div class="field">
+                        <label class="label">Name</label>
+                        <div class="control">
+                            <input class="input is-medium" type="text" id="nama">
                         </div>
                     </div>
-                    <div class="column is-one-third has-text-left">
-                        <div class="field">
-                            <label class="label">Name</label>
-                            <div class="control">
-                                <input class="input is-medium" type="text" id="nama">
-                            </div>
-                        </div>
-                        <div class="field">
-                            <label class="label">Email</label>
-                            <div class="control">
-                                <input class="input is-medium" type="email" id="email">
-                            </div>
-                        </div>
-                        <div class="field">
-                            <label class="label">Message</label>
-                            <div class="control">
-                                <textarea class="textarea is-medium" id="message"></textarea>
-                            </div>
-                        </div>
+                    <div class="field">
+                        <label class="label">Email</label>
                         <div class="control">
-                            <button type="submit" class="button is-link is-fullwidth has-text-weight-medium is-medium" id="actionButton">Send Message</button>
+                            <input class="input is-medium" type="email" id="email">
                         </div>
+                    </div>
+                    <div class="field">
+                        <label class="label">Message</label>
+                        <div class="control">
+                            <textarea class="textarea is-medium" id="message"></textarea>
+                        </div>
+                    </div>
+                    <div class="control">
+                        <button type="submit" class="button is-link is-fullwidth has-text-weight-medium is-medium" id="actionButton">Send Message</button>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
+<script>
+    // Fetch JSON data
+    fetch('contact.json')
+        .then(response => response.json())
+        .then(data => {
+            // Update HTML content with JSON data
+            document.getElementById('contactTitle').innerText = data.contactInfo.title;
+            document.getElementById('description').innerText = data.contactInfo.description;
+            document.getElementById('facebookLink').href = data.contactInfo.socialMedia[0].url;
+            document.getElementById('instagramLink').href = data.contactInfo.socialMedia[1].url;
+            document.getElementById('twitterLink').href = data.contactInfo.socialMedia[2].url;
+        })
+        .catch(error => console.error('Error fetching JSON:', error));
+</script>
+
 </body>
 </html>
